dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__inks__curve.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
expression: map
---
-ffffffffffff-------------------------------------------------
-EEEEEEE----------...........................................-
-----.....----------------------------------------------------
-----.....----------------------------------------------------
-----.....----------------------------------------------------
-----.....----------------------------------------------------
-----.....----------------------------------------------------
-----EEE..------------------------------------GGGGGGGGGGGGGGG-
-----.....GGGGGGGGGGGGGGGGGGGGGXXXXXXXXGGGGGGGG??????????????-
-----.....----------------------------------------------------
-----.....----------------------------------------------------
-----.....----------------------------------------------------
-----.....----------------------------------------------------
-----.....----------------------------------------------------
-----.....----------------------------------------------------
--------------------------------------------------------------
