dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__inks__footer.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
assertion_line: 182
expression: map
---
Addddd-AAddddd-Addddddd-AAAdddddddddd-AAAddddddddddd-Addddddd-
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
