dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__inks__games.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
assertion_line: 182
expression: map
---
-fffffff------------------------------------------------------
-AAffffffffffffffffdddddWWWWWWWWWddddddd.....................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
--------------------------------------------------------------
