dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__inks__header.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
expression: map
---
AAAAAAAAAA.ddddddd.GGGGGGGGG..AAAAA...........................
--------------------------------------------------------------
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
..............................................................
