dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__inks__lab.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
expression: map
---
-fffff--------------------------------------------------------
-ffffffffffAAAAAAAAAA..G.....................................-
-WWWWWWWWWWWWWWWWWW..........................................-
-GGddddddddddddddd--------------------------.................-
-GGddddddddddddd-------------------------....................-
-AAffffffffff---------.......................................-
---dddddddddd--..............................................-
-............................................................-
-ddddddddCCCCC...............................................-
-ddddddddddCCCCC.............................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
--------------------------------------------------------------
