dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__inks__machine.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
expression: map
---
-fffffffff----------------------------------------------------
-dddddCCCCCCCCCCCCCCCC....fffffdddddddddddddddd..............-
-dddddPPP.................ddddddddddG........................-
-WWWWWWWWWWWWWWWWWWWWWWW.....................................-
-ddffffffffdddddddd..........................................-
-ddffffffffdddddddddddd......................................-
-ddfffffffdddddddddddddd.....................................-
-GdddddXddddd--------Gdddddddddddddddd.......................-
-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX..............-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
--------------------------------------------------------------
