dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__inks__matches.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
expression: map
---
-fffffffff----------------------------------------------------
-ddddddddddddddddd-----ffffffff---------XXXXXXX..............-
-AAAAAAAAAA-----ddddddd--------WWWWWWWWWWW...................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
-............................................................-
--------------------------------------------------------------
