dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__inks__mind.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
expression: map
---
AfffffffffffffffAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
A           ..ffffffddd...G..................................A
AddddddCCCCCCCC..................ddddddddddddddddd...........A
Addddddffffffddddddddddddfffffddddddddffffffdddddddddfff.....A
A............................................................A
A............................................................A
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAddddddddddddddddddddddddd..A
Addddddddddddddddddddddd..........ddddddddddddddddddddddddd..A
Adddddddddddd.....................ddddddddddddddddddddddddd..A
A............................................................A
A............................................................A
A............................................................A
A............................................................A
A............................................................A
AddddPPPPffffffffffffff......................................A
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
